# handler/createOpening.go
@@ -7,6 +7,16 @@ import (
 	"github.com/lirajoaop/gopportunities/schemas"
 )
 
+// @Summary Create opening
+// @Description Create a new job opening
+// @Tags Opening
+// @Accept json
+// @Produce json
+// @Param request body CreateOpeningRequest true "Request Body"
+// @Success 200 {object} CreateOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /opening [post]
 func CreateOpeningHandler(ctx *gin.Context) {
 	request := CreateOpeningRequest{}
 
